fixe alignment issues

--- a/css/jwst.css
+++ b/css/jwst.css
@@ -5,24 +5,7 @@ html {
 body{
     background-color: #000;
 }
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  animation: spin 2s linear infinite;
-  position: absolute;
-    top: 50%;
-    left: 40%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 .tv9-interactive {
     color: #FFF;
     font-family: 'Montserrat', sans-serif;
@@ -766,9 +749,9 @@ video{
         bottom: 12%;
     }
 
-    #origins #origins-para1, #origins #origins-para2{
+    /* #origins #origins-para1, #origins #origins-para2{
         left: 11%;
-    }
+    } */
 
     #range-para1, #range-para2, #lagrange-para1{
         width: 80%;
@@ -1087,9 +1070,9 @@ video{
         width: 50%;
     }
 
-    #origins #origins-para1, #origins #origins-para2{
+    /* #origins #origins-para1, #origins #origins-para2{
         left: 24%;
-    }
+    } */
 
     #origins img {
         position: absolute;
